# tree-sitter-elixir

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Cargo.toml  Makefile  README.md  go.mod  grammar.js  index.html  package-lock.json  package.json  playground.js  pyproject.toml  setup.py  tree-sitter-elixir.wasm  tree-sitter.js  tree-sitter.json  tree-sitter.wasm
.github/workflows/: generate.yml  publish.yml  test.yml
bindings/c/: tree-sitter-elixir.h
bindings/rust/: lib.rs
queries/: highlights.scm  injections.scm  tags.scm
src/: grammar.json  node-types.json
test/corpus/expression/: operator.txt
test/highlight/: basic_iex_support.ex
