[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-elixir"
description = "Elixir grammar for tree-sitter"
version = "0.3.4"
keywords = ["incremental", "parsing", "tree-sitter", "elixir"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed"
]
requires-python = ">=3.9"
license.text = "Apache-2.0"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/elixir-lang/tree-sitter-elixir"

[project.optional-dependencies]
core = ["tree-sitter~=0.23"]

[tool.cibuildwheel]
build = "cp39-*"
build-frontend = "build"
